# tellydb-rs

./: Cargo.toml  LICENSE  README.md
bins/telly-cli/: Cargo.toml
bins/telly-server/: Cargo.toml
crates/telly-common/: Cargo.toml
crates/telly-core/: Cargo.toml
crates/telly-core/src/: database.rs  kv.rs  lib.rs  value.rs
crates/telly-proto/: Cargo.toml  README.md
crates/telly-proto/src/: lib.rs
